k8s/prod.yml
apiVersion: v1
kind: Service
metadata:
  name: clinq-bridge-google
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: clinq-bridge-google
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: clinq-bridge-google
  name: clinq-bridge-google
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clinq-bridge-google
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: clinq-bridge-google
    spec:
      containers:
      - env:
        - name: REDIS_URL
          value: redis://10.237.97.227
        - name: GOOGLE_REDIRECT_URL
          value: https://google.bridge.clinq.com/oauth2/callback
        - name: OAUTH_IDENTIFIER
          value: GOOGLE
        - name: GOOGLE_CLIENT_ID
          valueFrom:
            secretKeyRef:
              key: google-client-id
              name: clinq-bridge-google
        - name: GOOGLE_CLIENT_SECRET
          valueFrom:
            secretKeyRef:
              key: google-client-secret
              name: clinq-bridge-google
        image: eu.gcr.io/integrations-174012/clinq-bridge-google:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
        name: clinq-bridge-google
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
        resources:
          limits:
            cpu: 200m
            memory: 400Mi
          requests:
            cpu: 100m
            memory: 200Mi
