k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - google.bridge.clinq.com
      secretName: clinq-bridge-google-tls
  rules:
    - host: google.bridge.clinq.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $APP
                port:
                  name: http
